# Kernel-Level-Tail-Latency-Attribution-in-RPC-Pipelines

./: .dockerignore  .gitignore  Dockerfile  FINDINGS.md  Makefile  README.md  RUN_GUIDE.md  go.mod  go.sum
analysis/notebooks/: 01_experiment_explorer.ipynb  02_correlation_analysis.ipynb  03_mitigation_report.ipynb
analysis/scripts/: add_plot_watermarks.py  analyze_all.py  case_control_analysis.py  chi_squared_throttle.py  collect_kernel_metrics.py  parse_ghz.py  per_request_correlation.py  per_signal_mannwhitney.py  plot_burst.py  plot_ebpf_correlation.py  plot_evidence.py  plot_jaeger_hops.py  plot_results.py  regenerate_ebpf_data.py  spike_detection.py  statistical_analysis.py  windowed_correlation.py
analysis/stats/: burst_sensitivity.csv  case_control_results.csv  chi_squared_throttle.csv  per_hop_analysis.csv  per_request_correlation.csv  per_signal_mannwhitney.csv  spike_detection.csv  spike_summary.csv  statistical_tests.csv  windowed_correlation.csv
blueprint/: 00_overview.md  01_problem_objectives_outcomes.md  02_rpc_pipeline.md  03_experiment_matrix.md  04_measurement_plan.md  05_ebpf_instrumentation.md  06_correlation_analysis.md  07_hypotheses.md  08_mitigations.md  09_timeline_risks.md  10_cpp_hft_components.md
cpp/: CMakeLists.txt
cpp/analyzer/: CMakeLists.txt  bpf_map_reader.cpp  bpf_map_reader.h  correlation_engine.h  csv_exporter.h  main.cpp  terminal_dashboard.h
cpp/loadgen/: CMakeLists.txt  grpc_worker.cpp  grpc_worker.h  hdr_histogram.h  json_output.cpp  json_output.h  main.cpp  spsc_ring.h  stats_collector.cpp  stats_collector.h  timestamp.h
cpp/matching_engine/: CMakeLists.txt  Dockerfile  grpc_server.cpp  grpc_server.h  main.cpp  matching_engine.h  memory_pool.h  order.h  order_book.h
cpp/tests/: CMakeLists.txt  test_hdr_histogram.cpp  test_order_book.cpp  test_spsc_ring.cpp
data/: all_experiments_summary.csv  burst-results.csv  ebpf_per_experiment.csv  kernel_metrics_source.csv
data/e10-throttle-contention/: rate-2000-run1.json  rate-2000-run2.json  rate-2000-run3.json
data/e14-pinning-stress-crossnode/: rate-2000-run1.json  rate-2000-run2.json  rate-2000-run3.json
data/e15-full-isolation/: rate-2000-run1.json  rate-2000-run2.json  rate-2000-run3.json
data/e2-cpu-contention/: rate-2000-run1.json  rate-2000-run2.json  rate-2000-run3.json
data/e3a-cfs-tight/: cfs-stats.csv  rate-2000-run1.json  rate-2000-run2.json  rate-2000-run3.json
data/e5-throttle-crossnode/: rate-2000-run1.json  rate-2000-run2.json  rate-2000-run3.json
data/e6-contention-crossnode/: rate-2000-run1.json  rate-2000-run2.json  rate-2000-run3.json
data/e7-full-stress/: rate-2000-run1.json  rate-2000-run2.json  rate-2000-run3.json
data/e8-resource-limits/: rate-2000-run1.json  rate-2000-run2.json  rate-2000-run3.json
data/e9-hostnet-stress-crossnode/: rate-2000-run1.json  rate-2000-run2.json  rate-2000-run3.json
deploy/: kind-cluster.yaml  kind-multinode.yaml
deploy/base/: auth.yaml  execution.yaml  gateway.yaml  jaeger.yaml  kustomization.yaml  marketdata.yaml  namespace.yaml  redis.yaml  risk.yaml  rqdelay.yaml
deploy/overlays/e12-hpa/: hpa.yaml  (+1 more)
docs/: experiment_mapping.md
ebpf/: Dockerfile  go.mod
ebpf/bpftrace/: README.md  cfs_throttle.bt  grpc_latency.bt  runqueue_latency.bt  softirq_latency.bt  tcp_retransmit.bt
ebpf/cmd/: main.go
ebpf/src/: rqdelay.bpf.c
k8s/: rqdelay-daemonset.yaml
loadgen/: run-all-experiments.sh  run-baseline.sh  run-experiment.sh
loadgen/burst/: main.go
pkg/delay/: delay.go  delay_test.go
pkg/tracing/: tracing.go
proto/: order.proto
proto/orderpb/: order.pb.go  order_grpc.pb.go
report/: 24_references.bib  24_report.aux  24_report.bbl  24_report.blg  24_report.tex  24_report.toc
scripts/: cfs-stats-collector.sh  sample-ebpf-metrics.sh  smoke-test.sh
services/auth/: main.go
services/execution/: main.go
services/gateway/: main.go
services/marketdata/: main.go
services/risk/: main.go
(+32 files in other folders)
